--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "particles-bg": "^2.5.5",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.2",
