--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -15,7 +16,7 @@
     "emailjs-com": "^3.2.0",
     "particles-bg": "^2.5.5",
     "react": "^18.2.0",
-    "react-awesome-reveal": "^4.2.8",
+    "react-awesome-reveal": "^4.2.14",
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
